--- a/package.json
+++ b/package.json
@@ -3,40 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-badge": "^1.0.0",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "embla-carousel-react": "^8.0.0",
-    "lucide-react": "^0.331.0",
-    "next": "14.1.0",
-    "postcss": "^8.4.35",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-github-calendar": "^3.4.0",
+    "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.297",
+    "react-pdf": "^7.7.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "use-debounce": "^9.0.1"
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
+    "typescript": "^4.9.5",
+    "typewriter-effect": "^2.21.0",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -56,4 +46,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
